# PPTParse

./: .gitignore  LICENSE  README.md  pyproject.toml  quickstart.py  test.pptx
.github/workflows/: test.yml
pptparse/: __init__.py  presentation.py  shapes.py  utils.py
test/: test_ppt.py
